continua el ejb

--- a/examenAsoWeb/.settings/org.eclipse.wst.common.component
+++ b/examenAsoWeb/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="examenAsoWeb">
+        
+    <wb-module deploy-name="AsoWeb-0.0.1-SNAPSHOT">
+        <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
+                
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="examenAsoWeb"/>
+        <dependent-module archiveName="AsoWebJPA-0.0.1.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/examenAsoWebJPA/examenAsoWebJPA">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                
         <property name="java-output-path" value="/examenAsoWeb/build/classes"/>
+        <property name="context-root" value="AsoWeb"/>
+            
     </wb-module>
+    
 </project-modules>
